--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ APP_SECRET=456779d391c239d3ed9cc46e2c24caef
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=3dd55d4427a1a95cc5d370740ed35874
+###< lexik/jwt-authentication-bundle ###
