--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 .idea
 public/images/.DS_Store
 .DS_Store
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
